--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.blink {
+  animation: 2s linear infinite condemned_blink_effect;
+}
+
+@keyframes condemned_blink_effect {
+  0% {
+    visibility: hidden;
+  }
+
+  50% {
+    visibility: hidden;
+  }
+
+  100% {
+    visibility: visible;
+  }
+}
+
+.popup-back{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #717171;
+  /* opacity: 0.6; */
+  z-index: 8;
+  border-radius: 8px;
+}
+
+.popup{
+  background-color: #fff;
+  height: 100%;
+  border-radius: 8px;
+  width: 100%;
+  opacity: 1;
+
+}
